--- a/week2/index.html
+++ b/week2/index.html
@@ -1,1 +1,117 @@
-<h1>Week2 Assignments</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Week2 Assignment 1 RWD Website</title>
+    <meta
+      name="description"
+      content="RWD website assignment for Appworks School"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/de93c4c170.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="mobile-menu hidden">
+      <i class="fa-solid fa-xmark"></i>
+      <a href="#">Item1</a>
+      <a href="#">Item2</a>
+      <a href="#">Item3</a>
+      <a href="#">Item4</a>
+    </div>
+    <div class="most-outer">
+      <nav>
+        <img id="logo" src="../week1/waveless-logo.svg" />
+        <i id="hamburger-menu" class="fa-solid fa-bars"></i>
+        <div class="menu-items">
+          <a href="#">Item1</a>
+          <a href="#">Item2</a>
+          <a href="#">Item3</a>
+          <a href="#">Item4</a>
+        </div>
+      </nav>
+      <section class="hero">
+        <h1>Welcome Message - Week 2</h1>
+      </section>
+      <main>
+        <h2>Section Title</h2>
+        <section class="card-container">
+          <div class="card">
+            <h3>Card Title</h3>
+            <p>
+              Nam libero tempore, cum soluta nobis est eligendi optio cumque
+              nihil impedit quo minus id quod maxime placeat facere possimus,
+              omnis voluptas assumenda est, omnis dolor repellendus.
+            </p>
+          </div>
+          <div class="card">
+            <h3>Card Title</h3>
+            <p>
+              Nam libero tempore, cum soluta nobis est eligendi optio cumque
+              nihil impedit quo minus id quod maxime placeat facere possimus,
+              omnis voluptas assumenda est, omnis dolor repellendus.
+            </p>
+          </div>
+          <div class="card">
+            <h3>Card Title</h3>
+            <p>
+              Nam libero tempore, cum soluta nobis est eligendi optio cumque
+              nihil impedit quo minus id quod maxime placeat facere possimus,
+              omnis voluptas assumenda est, omnis dolor repellendus.
+            </p>
+          </div>
+          <div class="card">
+            <h3>Card Title</h3>
+            <p>
+              Nam libero tempore, cum soluta nobis est eligendi optio cumque
+              nihil impedit quo minus id quod maxime placeat facere possimus,
+              omnis voluptas assumenda est, omnis dolor repellendus.
+            </p>
+          </div>
+        </section>
+        <section class="cta-section">
+          <button>Call to Action</button>
+        </section>
+        <section class="card-container hidden">
+          <div class="card">
+            <h3>Card Title</h3>
+            <p>
+              Nam libero tempore, cum soluta nobis est eligendi optio cumque
+              nihil impedit quo minus id quod maxime placeat facere possimus,
+              omnis voluptas assumenda est, omnis dolor repellendus.
+            </p>
+          </div>
+          <div class="card">
+            <h3>Card Title</h3>
+            <p>
+              Nam libero tempore, cum soluta nobis est eligendi optio cumque
+              nihil impedit quo minus id quod maxime placeat facere possimus,
+              omnis voluptas assumenda est, omnis dolor repellendus.
+            </p>
+          </div>
+          <div class="card">
+            <h3>Card Title</h3>
+            <p>
+              Nam libero tempore, cum soluta nobis est eligendi optio cumque
+              nihil impedit quo minus id quod maxime placeat facere possimus,
+              omnis voluptas assumenda est, omnis dolor repellendus.
+            </p>
+          </div>
+          <div class="card">
+            <h3>Card Title</h3>
+            <p>
+              Nam libero tempore, cum soluta nobis est eligendi optio cumque
+              nihil impedit quo minus id quod maxime placeat facere possimus,
+              omnis voluptas assumenda est, omnis dolor repellendus.
+            </p>
+          </div>
+        </section>
+      </main>
+    </div>
+  </body>
+</html>
