Updated according to comments (replaced id with class; added class for CTA button)

--- a/week2/index.html
+++ b/week2/index.html
@@ -27,7 +27,7 @@
     <div class="most-outer">
       <nav>
         <img id="logo" src="../week1/waveless-logo.svg" />
-        <i id="hamburger-menu" class="fa-solid fa-bars"></i>
+        <i class="fa-solid fa-bars hamburger-menu"></i>
         <div class="menu-items">
           <a href="#">Item1</a>
           <a href="#">Item2</a>
@@ -75,7 +75,7 @@
           </div>
         </section>
         <section class="cta-section">
-          <button>Call to Action</button>
+          <button class="cta-button">Call to Action</button>
         </section>
         <section class="card-container hidden">
           <div class="card">
