Attemp to fix fetchURL to account for both localhost and deployed service

--- a/week3/public/sum.html
+++ b/week3/public/sum.html
@@ -52,8 +52,9 @@
 
       //Handle Click
       function handleClick() {
+        const baseURL = window.location.origin;
         const inputNum = document.querySelector("#inputNum").value;
-        let fetchURL = `http://localhost:3000/getData`;
+        let fetchURL = `${baseURL}/getData`;
         if (inputNum !== "") fetchURL += `?number=${inputNum}`;
         fetch(fetchURL)
           .then((response) => {
